# camera_gui

./: .gitignore  README.md  changelogs.md  imgui.ini  meson.build  start.sh
include/: Application.hpp  Autoexposure.hpp  Autofocus.hpp  Barcode.hpp  Histogram.hpp  ModuleControl_v100.hpp  Multifocus.hpp  Pipeline.hpp  Sensor.hpp  Sharpness.hpp  ToolBar.hpp  Window.hpp  api.hpp  config.hpp  debug.hpp  gstlog.hpp  moduleControl.hpp  roi.hpp  takePhotos.hpp  utils.hpp  writetp.hpp
include/Plugins/Autoexposure/: Autoexposure.hpp
include/Plugins/Autofocus/: Autofocus.hpp  config.hpp  debug.hpp
include/Plugins/Barcode/: BarcodeDisplayer.hpp
include/Plugins/Multifocus/: Multifocus.hpp
include/Plugins/Sharpness/: Sharpness.hpp
include/Plugins/WhiteBalance/: WhiteBalance.hpp
include/Sensor/: ModuleControl_v100.hpp  Sensor.hpp  i2c.hpp  moduleControl.hpp
src/: Application.cpp  Autoexposure.cpp  Autofocus.cpp  BarcodeDisplayer.cpp  Histogram.cpp  ModuleControl_v100.cpp  Multifocus.cpp  Pipeline.cpp  Sharpness.cpp  ToolBar.cpp  Window.cpp  api.cpp  config.cpp  debug.cpp  gstlog.cpp  main.cpp  moduleControl.cpp  roi.cpp  takePhotos.cpp  utils.cpp  writetp.cpp
src/Plugins/Autoexposure/: Autoexposure.cpp
src/Plugins/Autofocus/: Autofocus.cpp  config.cpp  debug.cpp
src/Plugins/Barcode/: Barcode.cpp
src/Plugins/Multifocus/: Multifocus.cpp
src/Plugins/Sharpness/: Sharpness.cpp
src/Plugins/WhiteBalance/: WhiteBalance.cpp
src/Sensor/: ModuleControl_v100.cpp  Sensor.cpp  i2c.cpp  moduleControl.cpp
